syntax = "proto3";
package LabNet.Messages.Server;

enum Interfaces {
	NONE = 0;
	GPIO_TOP_PLANE = 1;
	SAM32 = 2;
	UART1 = 100;
	UART2 = 101;
	UART3 = 102;
	UART4 = 103;
}

// general messages
message PinId {
	Interfaces interface = 1;
	uint32 pin = 2;
}

message DigitalOutState {
	PinId pin = 1;
	bool state = 2;
}

message DigitalInState {
	PinId pin = 1;
	bool state = 2;
}

message NewByteData {
	PinId pin = 1;
	bytes data = 2;
}

message WriteByteDataComplete {
	Interfaces interface = 1;
	uint32 portId = 2;
}

message InterfaceInitResult {
	Interfaces interface = 1;
	bool is_succeed = 2;
}

message DigitalInInitResult {
	Interfaces interface = 1;
	uint32 pin = 2;
	bool is_succeed = 3;
}
	
message DigitalOutInitResult {
	Interfaces interface = 1;
	uint32 pin = 2;
	bool is_succeed = 3;
}

message OnlyOneConnectionAllowed {
}

message LabNetResetReply {
	bool is_reset = 1;
}

message LabNetIdReply {
	string id = 1;
	uint32 major_version = 2;
	uint32 minor_version = 3;
}
// general messages

message ServerWrappedMessage {
	oneof server_message {
		DigitalOutState digital_out_state = 1;
		DigitalInState digital_in_state = 2;
		NewByteData new_byte_data = 3;
		WriteByteDataComplete write_byte_data_complete = 4;
		InterfaceInitResult interface_init_result = 5;
		DigitalInInitResult digital_in_init_result = 6;
		DigitalOutInitResult digital_out_init_result = 7;
		OnlyOneConnectionAllowed only_one_connection = 8;
		LabNetResetReply reset = 9;
		LabNetIdReply id = 10;
	}
}